--- a/trunk/numere.cbp
+++ b/trunk/numere.cbp
@@ -121,6 +121,8 @@
 		<Unit filename="plugins.hpp" />
 		<Unit filename="procedure.cpp" />
 		<Unit filename="procedure.hpp" />
+		<Unit filename="resampler.cpp" />
+		<Unit filename="resampler.h" />
 		<Unit filename="script.cpp" />
 		<Unit filename="script.hpp" />
 		<Unit filename="settings.cpp" />
