git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@17 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/numere.cbp
+++ b/numere.cbp
@@ -81,6 +81,8 @@
 		<Unit filename="cache.hpp" />
 		<Unit filename="datafile.cpp" />
 		<Unit filename="datafile.hpp" />
+		<Unit filename="debugger.cpp" />
+		<Unit filename="debugger.hpp" />
 		<Unit filename="define.cpp" />
 		<Unit filename="define.hpp" />
 		<Unit filename="doc_helper.cpp" />
