--- a/trunk/numere.cbp
+++ b/trunk/numere.cbp
@@ -100,6 +100,8 @@
 		<Unit filename="graph_helper.hpp">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
+		<Unit filename="language.cpp" />
+		<Unit filename="language.hpp" />
 		<Unit filename="loop.cpp" />
 		<Unit filename="loop.hpp" />
 		<Unit filename="main.cpp" />
