Closing of Tickets: #42, #39, #20 Implementing of Tickets: #44, #43, #27, 26, #7
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@24 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/numere.cbp
+++ b/numere.cbp
@@ -100,6 +100,8 @@
 		<Unit filename="graph_helper.hpp">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
+		<Unit filename="language.cpp" />
+		<Unit filename="language.hpp" />
 		<Unit filename="loop.cpp" />
 		<Unit filename="loop.hpp" />
 		<Unit filename="main.cpp" />
