--- a/Chameleon.rc
+++ b/Chameleon.rc
@@ -1,40 +1,59 @@
+
+/*****************************************************************************
+    NumeRe: Framework fuer Numerische Rechnungen
+    Copyright (C) 2014  Erik Haenel et al.
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+******************************************************************************/
+
+#include <windows.h> // include for version info constants
+#include "kernel/core/version.h"
+#define wxUSE_NO_MANIFEST 0
+#include <wx/msw/wx.rc>
+//#define MANIFEST_RESOURCE_ID 1
+//MANIFEST_RESOURCE_ID RT_MANIFEST "numere.exe.manifest"
+
+
+// CODE FUER DAS ICON
 IDI_APPICON ICON "gui/icon.ico"
 
-#define wxUSE_NO_MANIFEST 0
-
-#include <wx/msw/wx.rc>
-
-
-VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,2,0,1800
- PRODUCTVERSION 1,2,0,1800
- FILEFLAGSMASK 0x17L
-#ifdef _DEBUG
- FILEFLAGS 0x1L
-#else
- FILEFLAGS 0x0L
-#endif
- FILEOS 0x4L
- FILETYPE 0x1L
- FILESUBTYPE 0x0L
-BEGIN
+//
+// TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
+//
+1 VERSIONINFO
+FILEVERSION RC_FILEVERSION
+PRODUCTVERSION RC_FILEVERSION
+FILEOS VOS_NT_WINDOWS32
+FILETYPE VFT_APP
+{
     BLOCK "StringFileInfo"
-    BEGIN
-        BLOCK "040904b0"
-        BEGIN
-            VALUE "Comments", "The Adaptive Instructional IDE"
-            VALUE "CompanyName", "Digital Gearheads"
-            VALUE "FileDescription", "Chameleon"
-            VALUE "FileVersion", "1.2.0.1800"
-            VALUE "InternalName", "Chameleon (Internal)"
-            VALUE "LegalCopyright", "Copyright Digital Gearheads 2006"
-            VALUE "OriginalFilename", "Chameleon.exe"
-            VALUE "ProductName", "Chameleon (ProductName)"
-            VALUE "ProductVersion", "1.2.0.1800"
-        END
-    END
+    {
+        BLOCK "040704E4"
+        {
+            VALUE "CompanyName", "Erik Hänel et al."
+            VALUE "FileVersion", RC_FILEVERSION_STRING
+            VALUE "FileDescription", "NumeRe: Framework für Numerische Rechnungen"
+            VALUE "InternalName", "NumeRe"
+            VALUE "LegalCopyright", "(c) 2016, Erik Hänel et al. | GNU GPL v3.0"
+            VALUE "LegalTrademarks", "muParser, (c) 2011 Ingo Berg; Boost, (c) 2006 Joe Coder; MathGL, (c) 2012 Alexey A. Balakin; GSL, (c) 2006, M. Galassi et al.; Eigen (c) 2007-2011, Benoit Jacob et al.; TinyXML-2, (c) 2014, Lee Thomason; BasicExcel, (c) 2006, Yap Chun Wei"
+            VALUE "OriginalFilename", "numere.exe"
+            VALUE "ProductName", "NumeRe | Freie numerische Software unter der GNU GPL v3.0"
+            VALUE "ProductVersion", RC_FILEVERSION_STRING
+        }
+    }
     BLOCK "VarFileInfo"
-    BEGIN
-        VALUE "Translation", 0x409, 1200
-    END
-END
+    {
+        VALUE "Translation", 0x0407, 1252, 0x409, 1252
+    }
+}
