Update of GUI code Implements tickets: #146, #148, #151, #153 Closes tickets: #138, #142, #147, #149, #150, #154
Adds missing scintilla edit for text markup feature.

git-svn-id: https://svn.code.sf.net/p/numere/source/branches/numere-gui@51 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -228,6 +228,8 @@
 		<Unit filename="common/chameleonprocessevent.h" />
 		<Unit filename="common/datastructures.h" />
 		<Unit filename="common/debug.h" />
+		<Unit filename="common/filewatcher.cpp" />
+		<Unit filename="common/filewatcher.hpp" />
 		<Unit filename="common/fixvsbug.h" />
 		<Unit filename="common/options.cpp" />
 		<Unit filename="common/recycler.cpp" />
@@ -283,6 +285,10 @@
 		<Unit filename="gui/helpviewer.hpp" />
 		<Unit filename="gui/imagepanel.cpp" />
 		<Unit filename="gui/imagepanel.hpp" />
+		<Unit filename="gui/tableeditpanel.cpp" />
+		<Unit filename="gui/tableeditpanel.hpp" />
+		<Unit filename="gui/tableviewer.cpp" />
+		<Unit filename="gui/tableviewer.hpp" />
 		<Unit filename="gui/viewerbook.cpp" />
 		<Unit filename="gui/viewerbook.hpp" />
 		<Unit filename="gui/viewerframe.cpp" />
