--- a/trunk/Chameleon.cbp
+++ b/trunk/Chameleon.cbp
@@ -4,7 +4,7 @@
 	<Project>
 		<Option title="Chameleon" />
 		<Option pch_mode="2" />
-		<Option compiler="gcc" />
+		<Option compiler="tdm-gcc" />
 		<MakeCommands>
 			<Build command="" />
 			<CompileFile command="" />
@@ -18,7 +18,7 @@
 				<Option output="../../../Software/NumeRe/numere" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Debug" />
 				<Option type="0" />
-				<Option compiler="gcc" />
+				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-g" />
@@ -70,7 +70,7 @@
 				<Option output="Release/NumeRe" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Release_dynamic" />
 				<Option type="0" />
-				<Option compiler="gcc" />
+				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-std=gnu++11" />
@@ -117,7 +117,7 @@
 				<Option output="Debug/NumeRe" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Debug_dynamic" />
 				<Option type="0" />
-				<Option compiler="gcc" />
+				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-g" />
@@ -163,7 +163,7 @@
 				<Option output="../../Software/rc/NumeRe/numere" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Release" />
 				<Option type="0" />
-				<Option compiler="gcc" />
+				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-Wall" />
