Implemented ticket #191 "Add duplicate code analysis"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@83 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -284,6 +284,8 @@
 		<Unit filename="gui/dialogs/RemoteFileDialog.h" />
 		<Unit filename="gui/dialogs/VariableWatchPanel.cpp" />
 		<Unit filename="gui/dialogs/VariableWatchPanel.h" />
+		<Unit filename="gui/dialogs/duplicatecodedialog.cpp" />
+		<Unit filename="gui/dialogs/duplicatecodedialog.hpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.cpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
 		<Unit filename="gui/dialogs/tipdialog.cpp" />
