Increased minimum window size of main window
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@93 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -240,6 +240,8 @@
 		<Unit filename="common/filewatcher.hpp" />
 		<Unit filename="common/fixvsbug.h" />
 		<Unit filename="common/globals.hpp" />
+		<Unit filename="common/numeredroptarget.cpp" />
+		<Unit filename="common/numeredroptarget.hpp" />
 		<Unit filename="common/options.cpp" />
 		<Unit filename="common/recycler.cpp" />
 		<Unit filename="common/recycler.hpp" />
