Implemented ticket #198 "Improve error messages" - Added some information to a few error messages - Further changes will be done on-the-fly
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@149 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -365,6 +365,7 @@
 		<Unit filename="kernel/core/doc_helper.hpp" />
 		<Unit filename="kernel/core/documentation.cpp" />
 		<Unit filename="kernel/core/documentation.hpp" />
+		<Unit filename="kernel/core/error.cpp" />
 		<Unit filename="kernel/core/error.hpp" />
 		<Unit filename="kernel/core/filesystem.cpp" />
 		<Unit filename="kernel/core/filesystem.hpp" />
