Fixed issue #217 "Usage of index vectors in target caches not possible"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@174 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -423,6 +423,7 @@
 		<Unit filename="kernel/core/settings.cpp" />
 		<Unit filename="kernel/core/settings.hpp" />
 		<Unit filename="kernel/core/stringparsing.cpp" />
+		<Unit filename="kernel/core/structures.hpp" />
 		<Unit filename="kernel/core/tinyxml2.cpp" />
 		<Unit filename="kernel/core/tinyxml2.h" />
 		<Unit filename="kernel/core/tools.cpp" />
