Implemented ticket #218 "Improve cache access for runtime"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@180 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -218,9 +218,8 @@
 				<Option type="0" />
 				<Option compiler="tdm-gcc" />
 				<Compiler>
+					<Add option="-O3" />
 					<Add option="-Wall" />
-					<Add option="-pg" />
-					<Add option="-g" />
 					<Add option="-std=gnu++11" />
 					<Add option="-mthreads" />
 					<Add option="-DDLLVER_MAJOR_MASK" />
@@ -236,7 +235,6 @@
 					<Add directory="$(#wx)/include/" />
 				</ResourceCompiler>
 				<Linker>
-					<Add option="-pg -lgmon" />
 					<Add library="wxmsw30u_stc" />
 					<Add library="wxscintilla" />
 					<Add library="wxmsw30u_media" />
