Implemented ticket #238 "Add more constants to NumeRe"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@205 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -369,6 +369,7 @@
 		<Unit filename="gui/tableeditpanel.hpp" />
 		<Unit filename="gui/tableviewer.cpp" />
 		<Unit filename="gui/tableviewer.hpp" />
+		<Unit filename="gui/textsplashscreen.hpp" />
 		<Unit filename="gui/viewerbook.cpp" />
 		<Unit filename="gui/viewerbook.hpp" />
 		<Unit filename="gui/viewerframe.cpp" />
