Implemented ticket #244 "Move duplicate code analysis to secondary thread"
(Also added some little fixes to the plotting component)

git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@208 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -438,7 +438,7 @@
 		<Unit filename="kernel/core/loop.cpp" />
 		<Unit filename="kernel/core/loop.hpp" />
 		<Unit filename="kernel/core/main.cpp">
-			<Option target="Debug" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="kernel/core/matrixoperations.cpp" />
 		<Unit filename="kernel/core/odesolver.cpp" />
