--- a/trunk/Chameleon.cbp
+++ b/trunk/Chameleon.cbp
@@ -472,6 +472,7 @@
 		<Unit filename="kernel/core/script.hpp" />
 		<Unit filename="kernel/core/settings.cpp" />
 		<Unit filename="kernel/core/settings.hpp" />
+		<Unit filename="kernel/core/spline.h" />
 		<Unit filename="kernel/core/stringparsing.cpp" />
 		<Unit filename="kernel/core/structures.hpp" />
 		<Unit filename="kernel/core/tinyxml2.cpp" />
