Implemented ticket #329 "Create multiargument function methods for data sets" (Refactored part of the code on-the-fly)
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@326 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -414,6 +414,8 @@
 		<Unit filename="kernel/core/built-in.hpp" />
 		<Unit filename="kernel/core/datamanagement/cache.cpp" />
 		<Unit filename="kernel/core/datamanagement/cache.hpp" />
+		<Unit filename="kernel/core/datamanagement/dataaccess.cpp" />
+		<Unit filename="kernel/core/datamanagement/dataaccess.hpp" />
 		<Unit filename="kernel/core/datamanagement/datafile.cpp" />
 		<Unit filename="kernel/core/datamanagement/datafile.hpp" />
 		<Unit filename="kernel/core/datamanagement/dataops.cpp" />
