Implemented ticket #356 "Transform the table handling for the viewer to pointers"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@367 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -414,6 +414,7 @@
 		<Unit filename="kernel/core/built-in.hpp" />
 		<Unit filename="kernel/core/datamanagement/cache.cpp" />
 		<Unit filename="kernel/core/datamanagement/cache.hpp" />
+		<Unit filename="kernel/core/datamanagement/container.hpp" />
 		<Unit filename="kernel/core/datamanagement/dataaccess.cpp" />
 		<Unit filename="kernel/core/datamanagement/dataaccess.hpp" />
 		<Unit filename="kernel/core/datamanagement/datafile.cpp" />
