Implemented ticket #294 "Improve linebreaks in the console"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@371 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -31,6 +31,8 @@
 					<Add option="-DwxUSE_UNICODE" />
 					<Add option="-D__GNUWIN32__" />
 					<Add option="-D__WXMSW__" />
+					<Add option="-DWXDEBUG" />
+					<Add option="-DDO_LOG" />
 					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
 					<Add directory="$(#wx)/include" />
 				</Compiler>
