Implemented ticket #377 "Add a busy indicator to the taskbar"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@394 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -307,6 +307,8 @@
 		<Unit filename="gui/IconManager.h" />
 		<Unit filename="gui/NumeReNotebook.cpp" />
 		<Unit filename="gui/NumeReNotebook.h" />
+		<Unit filename="gui/NumeReStatusbar.cpp" />
+		<Unit filename="gui/NumeReStatusbar.hpp" />
 		<Unit filename="gui/NumeReWindow.cpp" />
 		<Unit filename="gui/NumeReWindow.h" />
 		<Unit filename="gui/dialogs/AboutChameleonDialog.cpp" />
