Implemented tickets #379 and #382 "Make 'mask' the default loop behavior" "Use semicolons in loops like everywhere"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@400 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -268,6 +268,9 @@
 				</Linker>
 			</Target>
 		</Build>
+		<Compiler>
+			<Add option="-D__MSVCRT_VERSION__=0x0601" />
+		</Compiler>
 		<Linker>
 			<Add option="-lmgl" />
 			<Add option="-lgsl" />
