Implemented ticket #430 "Renaming - Check Boxes"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@482 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -333,6 +333,8 @@
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
 		<Unit filename="gui/dialogs/grouppanel.cpp" />
 		<Unit filename="gui/dialogs/grouppanel.hpp" />
+		<Unit filename="gui/dialogs/renamesymbolsdialog.cpp" />
+		<Unit filename="gui/dialogs/renamesymbolsdialog.hpp" />
 		<Unit filename="gui/dialogs/tipdialog.cpp" />
 		<Unit filename="gui/dialogs/tipdialog.hpp" />
 		<Unit filename="gui/dialogs/treelistctrl.cpp" />
