Implemented ticket #223 "Create a variables widget"
Fixed issue #449
"Large tables load and react slow"

git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@485 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -354,6 +354,8 @@
 		<Unit filename="gui/globals.hpp" />
 		<Unit filename="gui/graphviewer.cpp" />
 		<Unit filename="gui/graphviewer.hpp" />
+		<Unit filename="gui/gridtable.cpp" />
+		<Unit filename="gui/gridtable.hpp" />
 		<Unit filename="gui/helpviewer.cpp" />
 		<Unit filename="gui/helpviewer.hpp" />
 		<Unit filename="gui/imagepanel.cpp" />
