Implemented ticket #319 "Create a procedure browser for the current opened file"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@500 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -362,6 +362,8 @@
 		<Unit filename="gui/imagepanel.hpp" />
 		<Unit filename="gui/numeredroptarget.cpp" />
 		<Unit filename="gui/numeredroptarget.hpp" />
+		<Unit filename="gui/procedureviewer.cpp" />
+		<Unit filename="gui/procedureviewer.hpp" />
 		<Unit filename="gui/tableeditpanel.cpp" />
 		<Unit filename="gui/tableeditpanel.hpp" />
 		<Unit filename="gui/tableviewer.cpp" />
