Implemented ticket #320 "Create GUI dialog functions/commands"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@517 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -524,6 +524,8 @@
 		<Unit filename="kernel/kernel.hpp" />
 		<Unit filename="kernel/syntax.cpp" />
 		<Unit filename="kernel/syntax.hpp" />
+		<Unit filename="kernel/windowmanager.cpp" />
+		<Unit filename="kernel/windowmanager.hpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
